# character-service

./: Cargo.toml  Dockerfile  README.md  build.sh  database.Dockerfile  docker-compose.yml  service.Dockerfile
res/: init_database.sh  init_database.sql  postgresql.conf  start_database.sh
src/: main.rs
src/core/: mod.rs
src/core/api/: mod.rs
src/core/api/route/: mod.rs  postgresql.conf
src/core/database/: mod.rs
