[package]
name = "character-service"
version = "0.1.0"
edition = "2021"
authors = ["Lahcène Belhadi <lahcene.belhadi@gmail.com>"]

# HTTP Support for the API
# https://crates.io/crates/actix-web
[dependencies.actix-web]
version = "4.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dbzlib-rs]
path = "../dbzlib-rs"
